--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -29,9 +29,9 @@
 #### [ 【菁英论坛】中共真实军力 不过如此](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825926.md)
 #### [ 王友群：中共二十大前的善恶大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826020.md)
 #### [ 章天亮: 中央军委大换血 王沪宁修改党章](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654332.md)
+#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 成都解封消息又被提前“暴雷”市长大怒疑曝光(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016779.md)
 #### [ 【远见快评】习旧文新发释信号 习普会谈啥？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826083.md)
-#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ “习普会”气氛尴尬 普京紧盯习近平 习眼神躲闪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529525.md)
 #### [ 清华教授劳东燕微博全部清空 疑遭噤声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826314.md)
 #### [ 习普会 普京大赞中共 专家：习近平政治豪赌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654314.md)
@@ -47,7 +47,7 @@
 #### [ 【财商天下】三年不出门天下已变 习中亚之行用意何在](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825946.md)
 #### [ 【禁闻】栗战书讲话视频曝光 中共策应俄军攻乌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529005.md)
 #### [ 【禁闻】习近平二十大前出访 学者解析原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529002.md)
+#### [ 分析：习近平中国梦恐沦白日梦 强军梦更难实现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529688.md)
 #### [ 习近平缺席上合峰会晚宴 消息人士：担心疫情](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529701.md)
 #### [ 传中共二十大后李克强访问柬埔寨](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529449.md)
 #### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
-#### [ 【热门话题】“习普会”气氛尴尬/习缺席上合峰会晚宴](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529689.md)
