--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -30,9 +30,9 @@
 #### [ 广州政法委原书记谢晓丹被双开 曾称“愿公开财产”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016672.md)
 #### [ 章天亮: 中央军委大换血 王沪宁修改党章](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654332.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
+#### [ 习近平缺席上合峰会领袖晚宴 舆论翻车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826772.md)
 #### [ “习普会”气氛尴尬 普京紧盯习近平 习眼神躲闪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529525.md)
 #### [ 【远见快评】习旧文新发释信号 习普会谈啥？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826083.md)
-#### [ 习近平缺席上合峰会领袖晚宴 舆论翻车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826772.md)
 #### [ 清华教授劳东燕微博全部清空 疑遭噤声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826314.md)
 #### [ 成都解封消息又被提前“暴雷”市长大怒疑曝光(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016779.md)
 #### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
@@ -41,13 +41,13 @@
 #### [ 习普会后中共变低调 分析：习对俄政策在变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826738.md)
 #### [ 习近平抵达中亚行第一站 外界关注他对哈萨克的影响(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016715.md)
 #### [ 普习吹捧互相支持 毛宁在记者会被一问题问住](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826785.md)
+#### [ 习2023让出主席？专家：一大挫败导致他不能一统江山](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654587.md)
 #### [ 湖北版“孙小果”保护伞曝光 包含军队官员](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826249.md)
 #### [ 普京习近平会晤 专家解读中俄各自声明](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825984.md)
-#### [ 习2023让出主席？专家：一大挫败导致他不能一统江山](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654587.md)
 #### [ 王小洪查孙力军政治团伙 中共副总理韩正被牵出(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999389.md)
 #### [ 章天亮: 党章几处重大修改 李克强只好低调躺平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654626.md)
 #### [ “习普会”是为世界“注入稳定性”还是习被俄挟持 形势所迫？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654395.md)
 #### [ 美报告：中共军方高层有致命伤 或步俄后尘](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826589.md)
 #### [ 【热门话题】“习普会”气氛尴尬/习缺席上合峰会晚宴](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529689.md)
+#### [ 长沙电信大楼火灾 传楼内藏省纪委软禁官员场所](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826830.md)
 #### [ 分析：习近平中国梦恐沦白日梦 强军梦更难实现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529688.md)
-#### [ 分析：二十大连任前习会普京 寻求外部承认](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826431.md)
